--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,15 +4,15 @@
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Asteroids_CloneCPP/Maps/Asteroids_Clone.Asteroids_Clone
+EditorStartupMap=/Game/Asteroids_CloneCPP/Maps/MainMenu.MainMenu
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Asteroids_CloneCPP/Maps/Asteroids_Clone.Asteroids_Clone
-ServerDefaultMap=/Game/Asteroids_CloneCPP/Maps/Asteroids_Clone.Asteroids_Clone
+GameDefaultMap=/Game/Asteroids_CloneCPP/Maps/MainMenu.MainMenu
+ServerDefaultMap=/Game/Asteroids_CloneCPP/Maps/MainMenu.MainMenu
 GlobalDefaultGameMode=/Script/Asteroids_Clone.Asteroids_CloneGameMode
 GlobalDefaultServerGameMode=None
 
@@ -69,5 +69,3 @@ SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
-
