--- a/Asteroids_Clone.uproject
+++ b/Asteroids_Clone.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.22",
+	"EngineAssociation": "4.25",
 	"Category": "",
 	"Description": "",
 	"Modules": [
@@ -12,5 +12,12 @@
 				"Engine"
 			]
 		}
+	],
+	"TargetPlatforms": [
+		"MacNoEditor",
+		"TVOS",
+		"WindowsNoEditor",
+		"AllDesktop",
+		"HTML5"
 	]
 }
