--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -19,7 +19,8 @@ GlobalDefaultServerGameMode=None
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_11
 
-
+[/Script/LinuxTargetPlatform.LinuxTargetSettings]
+TargetArchitecture=X86_64UnknownLinuxGnu
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
